adding existing query html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,8 @@
 <h3>Hello!</h3>
 <h4>Please choose an option:</h4>
 <li>  <a href="/all">View All Tweets</a> </li>
-<li> <a href="/search">Search For Something</a> </li>
+<li> <a href="/newQuery">Add a New Query</a> </li>
+<li> <a href="/existingQuery">Look at Existing Query</a> </li>
 
 </body>
 </html>
